[FIX] Dot color now matches enum specifications